--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="A simple, accessible template for a public website." />
-  <title>My Public Website</title>
+  <title>My wee Laura Houstons first valentines day as a Mrs</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
