Save site changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <a class="brand" href="/">My Website</a>
+      <a class="brand" href="/">Laura Houstons Valentines Day</a>
       <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="mainNav">Menu</button>
       <nav id="mainNav" class="main-nav" aria-label="Main navigation">
         <ul>
