Add yes page and update About button

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>About — My Public Website</title>
+  <title>Yes or No?</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,11 +20,11 @@
     </div>
   </header>
   <main class="container">
-    <h1>About</h1>
-    <p>This is a starter template for a public website. Use this page to describe the site, the team, or purpose.</p>
+    <a class="btn" href="yes.html">Yes</a>
+    <p>Good decision to pick the above</p>
     <section>
-      <h2>Getting started</h2>
-      <p>Copy the files, update content, and deploy to your preferred static host.</p>
+      <button class="btn" type="button">No</button>
+      <p>Good luck to you if you pick no</p>
     </section>
   </main>
   <footer class="site-footer">
