--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>Welcome — open to the public</h1>
         <p class="lead">A minimal, responsive starter template you can fork and deploy.</p>
         <p>
-          <a class="btn" href="about.html">Learn more</a>
+          <a class="btn" href="about.html">Will you be my valentine wee barra?</a>
           <button id="ctaButton" class="btn">Contact</button>
         </p>
 
