Save site changes

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <a class="brand" href="/">My Website</a>
+      <a class="brand" href="/">Lauras Valentine fun</a>
       <nav class="main-nav" aria-label="Main navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
