Add gallery section with images and responsive styling

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <a class="brand" href="/">My Website</a>
+      <a class="brand" href="/">The Houvens</a>
       <nav class="main-nav" aria-label="Main navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -21,7 +21,7 @@
   </header>
   <main class="container">
     <h1>Contact</h1>
-    <p>If you'd like to get in touch, use the form below or email <a href="mailto:hello@example.com">hello@example.com</a>.</p>
+    <p>If you'd like to get in touch, use the form below or email <a href="mailto:stewarthouston5991@hotmail.co.uk">stewarthouston5991@hotmail.co.uk</a>.</p>
 
     <form id="contactForm" method="POST" action="https://formspree.io/f/your-form-id">
       <label for="name">Name</label>
