Add IMG_8200.jpeg to yes.html page

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <a class="brand" href="/">Lauras Valentine fun</a>
+      <a class="brand" href="/">The Houvens</a>
       <nav class="main-nav" aria-label="Main navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -29,7 +29,7 @@
   </main>
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; <span id="year-about"></span> My Public Website</p>
+      <p>&copy; <span id="year-about"></span> The Houvens</p>
     </div>
   </footer>
   <script>document.getElementById('year-about').textContent = new Date().getFullYear();</script>
