--- a/contact.html
+++ b/contact.html
@@ -36,11 +36,11 @@
       <button type="submit">Send</button>
     </form>
 
-    <p class="hint">Tip: replace the `action` with your Formspree endpoint or handle submissions on your backend.</p>
+    <p class="hint">File your complaints here, they will not be dealt with</p>
   </main>
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; <span id="year-contact"></span> My Public Website</p>
+      <p>&copy; <span id="year-contact"></span> The Houvens</p>
     </div>
   </footer>
   <script>document.getElementById('year-contact').textContent = new Date().getFullYear();</script>
