--- a/yes.html
+++ b/yes.html
@@ -16,6 +16,7 @@
   <main class="center" role="main">
     <h1 class="huge">Best decision you ever made</h1>
     <div class="smiley" aria-hidden="true">😊</div>
+    <img src="assets/IMG_8200.jpeg" alt="Special moment" style="margin-top:2rem;max-width:400px;border-radius:8px;">
   </main>
 </body>
 </html>
