Add all 26 images to memories gallery section

--- a/index.html
+++ b/index.html
@@ -43,16 +43,38 @@
         <h2>The year of the new Mrs Houston</h2>
         <p>2025 — the year of our wedding!</p>
         <p>2026 — the year of Golf!</p>
+        <p>2026 — the year of more tent box!</p>
       </article>
     </section>
 
     <section class="gallery container">
       <h2>Memories</h2>
       <div class="gallery-grid">
-        <img src="assets/IMG_0043.jpeg" alt="Memory photo 1">
-        <img src="assets/IMG_0553.JPG" alt="Memory photo 2">
-        <img src="assets/IMG_0592.JPG" alt="Memory photo 3">
-        <img src="assets/IMG_0593.JPG" alt="Memory photo 4">
+        <img src="assets/IMG_0043.jpeg" alt="Memory photo">
+        <img src="assets/IMG_0117.JPG" alt="Memory photo">
+        <img src="assets/IMG_0553.JPG" alt="Memory photo">
+        <img src="assets/IMG_0592.JPG" alt="Memory photo">
+        <img src="assets/IMG_0593.JPG" alt="Memory photo">
+        <img src="assets/IMG_0655.JPG" alt="Memory photo">
+        <img src="assets/IMG_0711.JPG" alt="Memory photo">
+        <img src="assets/IMG_0790.JPG" alt="Memory photo">
+        <img src="assets/IMG_0841.JPG" alt="Memory photo">
+        <img src="assets/IMG_0945.JPG" alt="Memory photo">
+        <img src="assets/IMG_0970.jpeg" alt="Memory photo">
+        <img src="assets/IMG_1269.jpeg" alt="Memory photo">
+        <img src="assets/IMG_1598.JPG" alt="Memory photo">
+        <img src="assets/IMG_2407.jpeg" alt="Memory photo">
+        <img src="assets/IMG_2893.JPG" alt="Memory photo">
+        <img src="assets/IMG_3373.jpeg" alt="Memory photo">
+        <img src="assets/IMG_3434.jpeg" alt="Memory photo">
+        <img src="assets/IMG_3488.jpeg" alt="Memory photo">
+        <img src="assets/IMG_3587.JPG" alt="Memory photo">
+        <img src="assets/IMG_5458.jpeg" alt="Memory photo">
+        <img src="assets/IMG_7370.jpeg" alt="Memory photo">
+        <img src="assets/IMG_7631.jpeg" alt="Memory photo">
+        <img src="assets/IMG_9542.jpeg" alt="Memory photo">
+        <img src="assets/dc1d65c9-3e01-42a7-bd26-eb3fbdb8cde5.jpg" alt="Memory photo">
+        <img src="assets/f3e5ee82-0a71-483d-ba47-2fcdafb6cca6.jpg" alt="Memory photo">
       </div>
     </section>
   </main>
