--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
       <a class="brand" href="/">The Houvens</a>
       <nav class="main-nav" aria-label="Main navigation">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="home.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
