--- a/decision.html
+++ b/decision.html
@@ -12,8 +12,8 @@
       <a class="brand" href="/">The Houvens</a>
       <nav class="main-nav" aria-label="Main navigation">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="decision.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
