--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
       <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="mainNav">Menu</button>
       <nav id="mainNav" class="main-nav" aria-label="Main navigation">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="home.html">Home</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -24,7 +24,7 @@
   <main>
     <section class="hero">
       <div class="container">
-        <h1>Happy Valentine's Day!</h1>
+        <h1>Happy Valentine's Day Mrs Houston!</h1>
         <p class="lead"></p>
         <p>
           <a class="btn" href="about.html">Will you be my valentine wee barra?</a>
