Fix: improve moving 'No' button compatibility for Safari

--- a/decision.html
+++ b/decision.html
@@ -25,22 +25,25 @@
     <section class="move-btn-parent">
       <button class="btn move-btn" id="noBtn" type="button">No</button>
       <script>
-        const noBtn = document.getElementById('noBtn');
-        const parent = noBtn.parentElement;
-        parent.style.position = 'relative';
-        noBtn.style.position = 'absolute';
-        noBtn.style.left = '0px';
-        noBtn.style.top = '0px';
-        noBtn.addEventListener('mouseenter', function() {
-          const parentRect = parent.getBoundingClientRect();
-          const btnRect = noBtn.getBoundingClientRect();
-          // Calculate max movement so button stays in parent
-          const maxX = parent.offsetWidth - btnRect.width;
-          const maxY = parent.offsetHeight - btnRect.height;
-          const x = Math.random() * maxX;
-          const y = Math.random() * maxY;
-          noBtn.style.left = x + 'px';
-          noBtn.style.top = y + 'px';
+        document.addEventListener('DOMContentLoaded', function() {
+          const noBtn = document.getElementById('noBtn');
+          const parent = noBtn.parentElement;
+          parent.style.position = 'relative';
+          parent.style.minHeight = '100px';
+          noBtn.style.position = 'absolute';
+          noBtn.style.left = '0px';
+          noBtn.style.top = '0px';
+          noBtn.addEventListener('mouseenter', function() {
+            const parentRect = parent.getBoundingClientRect();
+            const btnRect = noBtn.getBoundingClientRect();
+            // Calculate max movement so button stays in parent, with 10px padding
+            const maxX = parent.offsetWidth - btnRect.width - 10;
+            const maxY = parent.offsetHeight - btnRect.height - 10;
+            const x = 10 + Math.random() * (maxX > 0 ? maxX : 0);
+            const y = 10 + Math.random() * (maxY > 0 ? maxY : 0);
+            noBtn.style.left = x + 'px';
+            noBtn.style.top = y + 'px';
+          });
         });
       </script>
       <p>Good luck to you if you pick no</p>
